# PyHardwareMonitor

./: .gitignore  .gitmodules  BUILD.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflow/: main.yml
.github/workflows/: main.yml  release.yaml
HardwareMonitor/: Util.py  __init__.py
HardwareMonitor/Hardware/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/CPU/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Controller/AeroCool/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Controller/AquaComputer/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Gpu/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Motherboard/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Motherboard/Lpc/EC/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Psu/Corsair/: __init__.py  __init__.pyi
HardwareMonitor/Hardware/Storage/: __init__.py  __init__.pyi
HardwareMonitor/Interop/: __init__.py  __init__.pyi
HardwareMonitor/PawnIo/: __init__.py  __init__.pyi
HardwareMonitor/Software/: __init__.py  __init__.pyi
HardwareMonitor/_util/: types.pyi
examples/: wsgi_provider.py
scripts/: generate_all.py  generate_namespace_init.py  generate_stubs.py  generate_types_util.py  namespace_template.py
test/: TestHardwareMonitor.py
